--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>Ứng Dụng Web</title>
-	<base href='thichdauda.somee.com/images'>
+	<base href='https://thichdauda.somee.com/images'>
 <style>
 a{text-decoration:none;}
 a:hover{color:red;}
