--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>Ứng Dụng Web</title>
-	<base href='https://thichdauda.somee.com/images'>
+	<!-- <base href='https://thichdauda.somee.com/images'> -->
 <style>
 a{text-decoration:none;}
 a:hover{color:red;}
@@ -18,7 +18,7 @@ center{display:none;}
 	if(top.location != self.location){top.location = self.location;}
 </script>
 
-<link href="images/icon3.png" rel="shortcut icon">
+<link href="images/icon1.png" rel="shortcut icon">
 </head>
 
 <body style='cursor:url(Images/mouse1.png),auto'>
