--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ center{display:none;}
 	if(top.location != self.location){top.location = self.location;}
 </script>
 
-<link href="images/icon1.png" rel="shortcut icon">
+<link href="/images/icon1.png" rel="shortcut icon">
 </head>
 
 <body style='cursor:url(Images/mouse1.png),auto'>
@@ -30,22 +30,22 @@ center{display:none;}
     <div style="text-align:center;">
     	<div style="display:inline-block;">
              <h3><a class='a1' href="HTML/html.html">HTML</a></h3>
-             <a class='pic' href="HTML/html.html"> <img src="images/html.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="HTML/html.html"> <img src="/images/html.jpg" width="120px" height="180px"> </a>
         </div>
 
          <div style="display:inline-block">
                <h3><a href="HTML/css.html">CSS</a></h3>
-               <a class='pic' href="HTML/css.html"> <img src="Images/css.jpg" width="120px" height="180px"> </a>
+               <a class='pic' href="HTML/css.html"> <img src="/Images/css.jpg" width="120px" height="180px"> </a>
          </div>
 
         <div style="display:inline-block;">
              <h3><a href="HTML/javascript.html">JavaSCript</a></h3>
-             <a class='pic' href="HTML/js.html"> <img src="images/javascript.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="HTML/js.html"> <img src="/images/javascript.jpg" width="120px" height="180px"> </a>
          </div>
 
          <div style="display:inline-block;">
          	<h3><a href="HTML/jq.html">JQuery</a></h3>
-            <a class='pic' href="HTML/jq.html"> <img src="images/jquery.jpg" width="120px" height="180px"> </a>
+            <a class='pic' href="HTML/jq.html"> <img src="/images/jquery.jpg" width="120px" height="180px"> </a>
          </div>
      </div>
 <audio controls autoplay>
