--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ center{display:none;}
     <div style="text-align:center;">
     	<div style="display:inline-block;">
              <h3><a class='a1' href="HTML/html.html">HTML</a></h3>
-             <a class='pic' href="HTML/html.html"> <img src="/images/html.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="HTML/html.html"> <img src="https://juyns2.github.io/images/html.jpg" width="120px" height="180px"> </a>
         </div>
 
          <div style="display:inline-block">
