--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ center{display:none;}
 	if(top.location != self.location){top.location = self.location;}
 </script>
 
-<link href="/images/icon1.png" rel="shortcut icon">
+<link href="https://juyns2.github.io/images/icon1.png" rel="shortcut icon">
 </head>
 
 <body style='cursor:url(Images/mouse1.png),auto'>
