--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ center{display:none;}
 <link href="https://juyns2.github.io/images/icon1.png" rel="shortcut icon">
 </head>
 
-<body style='cursor:url(Images/mouse1.png),auto'>
+<body style='cursor:url(/images/mouse1.png),auto'>
 <p style="background-color:#ddd;padding:30px;font-size:20px;"><span style='cursor:url(Images/Thach.png),auto'>haha</span>
 <span style='cursor:url(Images/H.png),auto'> 2haha</span>
 <span style='cursor:url(Images/lclick.png),auto'>3haha</span>
@@ -35,7 +35,7 @@ center{display:none;}
 
          <div style="display:inline-block">
                <h3><a href="HTML/css.html">CSS</a></h3>
-               <a class='pic' href="HTML/css.html"> <img src="/Images/css.jpg" width="120px" height="180px"> </a>
+               <a class='pic' href="HTML/css.html"> <img src="/images/css.jpg" width="120px" height="180px"> </a>
          </div>
 
         <div style="display:inline-block;">
