--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@ center{display:none;}
     <div style="text-align:center;">
     	<div style="display:inline-block;">
              <h3><a class='a1' href="HTML/html.html">HTML</a></h3>
-             <a class='pic' href="HTML/html.html"> <img src="https://juyns2.github.io/images/html.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="#"> <img src="https://juyns2.github.io/images/html.jpg" width="120px" height="180px"> </a>
         </div>
 
          <div style="display:inline-block">
                <h3><a href="HTML/css.html">CSS</a></h3>
-               <a class='pic' href="HTML/css.html"> <img src="/images/css.jpg" width="120px" height="180px"> </a>
+               <a class='pic' href="#"> <img src="/images/css.jpg" width="120px" height="180px"> </a>
          </div>
 
         <div style="display:inline-block;">
              <h3><a href="HTML/javascript.html">JavaSCript</a></h3>
-             <a class='pic' href="HTML/js.html"> <img src="/images/javascript.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="#"> <img src="/images/javascript.jpg" width="120px" height="180px"> </a>
          </div>
 
          <div style="display:inline-block;">
-         	<h3><a href="HTML/jq.html">JQuery</a></h3>
+         	<h3><a href="#">JQuery</a></h3>
             <a class='pic' href="HTML/jq.html"> <img src="/images/jquery.jpg" width="120px" height="180px"> </a>
          </div>
      </div>
 <audio controls autoplay>
           <source src='images/mangchung.mp3'>
 </audio>
-<iframe src="https://www.w3schools.com/embed" width="555" height="200">
+
           
 </body>
 </html>
