--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ center{display:none;}
          </div>
 
         <div style="display:inline-block;">
-             <h3><a href="HTML/javascript.html">JavaSCript</a></h3>
+             <h3><a href="#">JavaSCript</a></h3>
              <a class='pic' href="#"> <img src="/images/javascript.jpg" width="120px" height="180px"> </a>
          </div>
 
