--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@ center{display:none;}
 </head>
 
 <body style='cursor:url(/images/mouse1.png),auto'>
-<p style="background-color:#ddd;padding:30px;font-size:20px;"><span style='cursor:url(Images/Thach.png),auto'>haha</span>
+<!-- <p style="background-color:#ddd;padding:30px;font-size:20px;"><span style='cursor:url(Images/Thach.png),auto'>haha</span>
 <span style='cursor:url(Images/H.png),auto'> 2haha</span>
 <span style='cursor:url(Images/lclick.png),auto'>3haha</span>
-<span style='cursor:url(Images/dclick.png),auto'>4haha</span></p>
+<span style='cursor:url(Images/dclick.png),auto'>4haha</span></p>  -->
 	<h2 style="text-align:center">Danh mục Sách</h2>
     <div style="text-align:center;">
     	<div style="display:inline-block;">
-             <h3><a class='a1' href="HTML/html.html">HTML</a></h3>
-             <a class='pic' href="#"> <img src="https://juyns2.github.io/images/html.jpg" width="120px" height="180px"> </a>
+             <h3><a class='a1' href="#">HTML</a></h3>
+             <a class='pic' href="/vipjs.html"> <img src="https://juyns2.github.io/images/html.jpg" width="120px" height="180px"> </a>
         </div>
 
          <div style="display:inline-block">
-               <h3><a href="HTML/css.html">CSS</a></h3>
+               <h3><a href="#">CSS</a></h3>
                <a class='pic' href="#"> <img src="/images/css.jpg" width="120px" height="180px"> </a>
          </div>
 
@@ -45,7 +45,7 @@ center{display:none;}
 
          <div style="display:inline-block;">
          	<h3><a href="#">JQuery</a></h3>
-            <a class='pic' href="HTML/jq.html"> <img src="/images/jquery.jpg" width="120px" height="180px"> </a>
+            <a class='pic' href="#"> <img src="/images/jquery.jpg" width="120px" height="180px"> </a>
          </div>
      </div>
 <audio controls autoplay>
