--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ center{display:none;}
 	if(top.location != self.location){top.location = self.location;}
 </script>
 
-<link href="https://juyns2.github.io/images/icon1.png" rel="shortcut icon">
+<link href="../dataflink/icon1.png" rel="shortcut icon">
 </head>
 
-<body style='cursor:url(/images/mouse1.png),auto'>
+<body style='cursor:url(../dataflink/mouse1.png),auto'>
 <!-- <p style="background-color:#ddd;padding:30px;font-size:20px;"><span style='cursor:url(Images/Thach.png),auto'>haha</span>
 <span style='cursor:url(Images/H.png),auto'> 2haha</span>
 <span style='cursor:url(Images/lclick.png),auto'>3haha</span>
@@ -30,17 +30,17 @@ center{display:none;}
     <div style="text-align:center;">
     	<div style="display:inline-block;">
              <h3><a class='a1' href="#">HTML</a></h3>
-             <a class='pic' href="/html/js_vip1.html"> <img src="https://juyns2.github.io/images/html.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="/html/js_vip1.html"> <img src="../dataflink/images/html.jpg" width="120px" height="180px"> </a>
         </div>
 
          <div style="display:inline-block">
                <h3><a href="#">CSS</a></h3>
-               <a class='pic' href="#"> <img src="/images/css.jpg" width="120px" height="180px"> </a>
+               <a class='pic' href="#"> <img src="../dataflink/css.jpg" width="120px" height="180px"> </a>
          </div>
 
         <div style="display:inline-block;">
              <h3><a href="#">JavaSCript</a></h3>
-             <a class='pic' href="#"> <img src="/images/javascript.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="#"> <img src="../dataflink/javascript.jpg" width="120px" height="180px"> </a>
          </div>
 
          <div style="display:inline-block;">
@@ -49,7 +49,7 @@ center{display:none;}
          </div>
      </div>
 <audio controls autoplay>
-          <source src='images/mangchung.mp3'>
+          <source src='../dataflink/mangchung.mp3'>
 </audio>
 
           
