--- a/vipjs.html
+++ b/vipjs.html
@@ -72,7 +72,7 @@ else if(b == 27) click3();
 else {}; a=b;}
 
 function openW() {
-        window.open('http://toidicode.com', 'toidicode', 'width=500,height=600');
+        window.open('https://vietjack.com', 'Duy Tân', 'width=500,height=600');
         return false;}
 
 var demBt = 0;
