--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ center{display:none;}
     <div style="text-align:center;">
     	<div style="display:inline-block;">
              <h3><a class='a1' href="#">HTML</a></h3>
-             <a class='pic' href="/html/js_vip1.html"> <img src="../dataflink/images/html.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="/html/js_vip1.html"> <img src="../dataflink/html.jpg" width="120px" height="180px"> </a>
         </div>
 
          <div style="display:inline-block">
@@ -46,8 +46,7 @@ center{display:none;}
          </div>
 
          <div style="display:inline-block;">
-         	<h3><a href="#">JQuery</a></h3>
-            <a class='pic' href="#"> <img src="/images/jquery.jpg" width="120px" height="180px"> </a>
+         	<h3><a href="#">JQuery</a></h3>../dataflink/jquery.jpg" width="120px" height="180px"> </a>
          </div>
      </div>
 <audio id='ado1' controls autoplay>
