--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ center{display:none;}
 <script>
 	if(top.location != self.location){top.location = self.location;}
 	function play(){
-	ado1.play() = true; ado1.volume = 0.7;}
+	ado1.play() = true; ado1.volume = 0.07; body.focus();}
 </script>
 
 <link href="../dataflink/icon1.png" rel="shortcut icon">
@@ -49,7 +49,7 @@ center{display:none;}
          	<h3><a href="#">JQuery</a></h3>../dataflink/jquery.jpg" width="120px" height="180px"> </a>
          </div>
      </div>
-<audio id='ado1' controls autoplay>
+<audio id='ado1'>
           <source src='../dataflink/mangchung.mp3'>
 </audio>
 
