--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ center{display:none;}
          </div>
 
          <div style="display:inline-block;">
-         	<h3><a href="#">JQuery</a></h3>../dataflink/jquery.jpg" width="120px" height="180px"> </a>
+         	<h3><a href="#">JQuery</a></h3>
+		    <a class='pic' href="#"> <img src="../dataflink/jquery.jpg" width="120px" height="180px"> </a>
          </div>
      </div>
 <audio id='ado1'>
