--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ center{display:none;}
 <script>
 	if(top.location != self.location){top.location = self.location;}
 	function play(){
-	a1.focus(); if(a1.focus() == true)ado1.play() = true; ado1.volume = 0.07; }
+	a1.focus(); if(a1.focus() == true) ado1.play() = true; ado1.volume = 0.07; }
 </script>
 
 <link href="../dataflink/icon1.png" rel="shortcut icon">
@@ -31,8 +31,8 @@ center{display:none;}
 	<h2 style="text-align:center">Danh mục Sách</h2>
     <div style="text-align:center;">
     	<div style="display:inline-block;">
-             <h3><a id='a1' href="#">HTML</a></h3>
-             <a class='pic' href="/html/js_vip1.html"> <img src="../dataflink/html.jpg" width="120px" height="180px"> </a>
+             <h3><a id='a2' href="#">HTML</a></h3>
+             <a class='pic' id='1' href="/html/js_vip1.html"> <img src="../dataflink/html.jpg" width="120px" height="180px"> </a>
         </div>
 
          <div style="display:inline-block">
