--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ center{display:none;}
 <script>
 	if(top.location != self.location){top.location = self.location;}
 	function play(){
-	a1.focus();  ado1.play() = true; ado1.volume = 0.07; }
+	ado1.play() = true; ado1.volume = 0.07; }
 </script>
 
 <link href="../dataflink/icon1.png" rel="shortcut icon">
