--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ center{display:none;}
 <script>
 	if(top.location != self.location){top.location = self.location;}
 	function play(){
-	ado1.play() = true; ado1.volume = 0.06; }
+	ado1.play(),ado1.volume = 0.05; }
 </script>
 
 <link href="../dataflink/icon1.png" rel="shortcut icon">
 </head>
 
-<body style='cursor:url(../dataflink/mouse1.png),auto' onmousewheel='play()'>
+<body style='cursor:url(../dataflink/mouse1.png),auto' onclick='play()'>
 <!-- <p style="background-color:#ddd;padding:30px;font-size:20px;"><span style='cursor:url(Images/Thach.png),auto'>haha</span>
 <span style='cursor:url(Images/H.png),auto'> 2haha</span>
 <span style='cursor:url(Images/lclick.png),auto'>3haha</span>
