--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@ center{display:none;}
 <span style='cursor:url(Images/H.png),auto'> 2haha</span>
 <span style='cursor:url(Images/lclick.png),auto'>3haha</span>
 <span style='cursor:url(Images/dclick.png),auto'>4haha</span></p>  -->
-	<h2 style="text-align:center">Danh mục Sách</h2>
+	<h2 style="text-align:center">Thích Cô Độc</h2>
     <div style="text-align:center;">
     	<div style="display:inline-block;">
-             <h3><a id='a2' href="#">HTML</a></h3>
-             <a class='pic' id='1' href="/html/js_vip1.html"> <img src="../dataflink/html.jpg" width="120px" height="180px"> </a>
+             <h3><a id='a2' href="#">So_1</a></h3>
+             <a class='pic' id='1' href="/html/js_vip1.html"> <img src="../dataflink/.jpg" width="120px" height="180px"> </a>
         </div>
 
          <div style="display:inline-block">
-               <h3><a href="#">CSS</a></h3>
-               <a class='pic' href="#"> <img src="../dataflink/css.jpg" width="120px" height="180px"> </a>
+               <h3><a href="#">So_2</a></h3>
+               <a class='pic' href="#"> <img src="../dataflink/.jpg" width="120px" height="180px"> </a>
          </div>
 
         <div style="display:inline-block;">
-             <h3><a href="#">JavaSCript</a></h3>
-             <a class='pic' href="#"> <img src="../dataflink/javascript.jpg" width="120px" height="180px"> </a>
+             <h3><a href="#">So_3</a></h3>
+             <a class='pic' href="#"> <img src="../dataflink/.jpg" width="120px" height="180px"> </a>
          </div>
 
          <div style="display:inline-block;">
-         	<h3><a href="#">JQuery</a></h3>
-		    <a class='pic' href="#"> <img src="../dataflink/jquery.jpg" width="120px" height="180px"> </a>
+         	<h3><a href="#">So_4</a></h3>
+		    <a class='pic' href="#"> <img src="../dataflink/.jpg" width="120px" height="180px"> </a>
          </div>
 	    <audio id='ado1'>
           <source src='../dataflink/mangchung.mp3'>
