--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ center{display:none;}
 
         <div style="display:inline-block;">
              <h3><a href="#">So_3</a></h3>
-             <a class='pic' href="#"> <img src="../dataflink/.jpg" width="120px" height="180px"> </a>
+             <a class='pic' href="../html/cacpheptinh.php"> <img src="../dataflink/.jpg" width="120px" height="180px"> </a>
          </div>
 
          <div style="display:inline-block;">
