--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ cursor:url(../Images/mouse1.png),auto;}
 <div id='main'>
 <div id='d1'>
 <video id='video1' width='450' controls>
-<source src='https://github.com/juyns2/images/mangchung.mp4' type='video/mp4'>
+<source src='../dataflink/mangchung.mp4' type='video/mp4'>
 </video>
 </div>
 
