--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ else x.innerHTML='', txtBt.innerHTML = 'Xem Kích Thước';}
 
 <div id='d2'><p id='kt'></p><p id='p1'></p>
 <button id='bt1' onclick='kttd()'> Xem Kích Thước </button></div>
+        <a href='url_error.html'>Page Error</a>
 <button id='bt2' onclick='click2()'> <img src='C:\Users\Hung Windows\Downloads\btfullsc.png'></button>
 <input type='text' name='email' onmouseup='click6()' id='txt1' placeholder='click vô'>
 </div>
