--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@ else x.innerHTML='', txtBt.innerHTML = 'Xem Kích Thước';}
 </script>
 
 <div id='d2'><p id='kt'></p><p id='p1'></p>
-<button id='bt1' onclick='kttd()'> Xem Kích Thước </button><a href='url_error.html'>Page Error</a></div>
+<button id='bt1' onclick='kttd()'> Xem Kích Thước </button></div>
         
 <button id='bt2' onclick='click2()'> <img src='C:\Users\Hung Windows\Downloads\btfullsc.png'></button>
 <input type='text' name='email' onmouseup='click6()' id='txt1' placeholder='click vô'>
 </div>
+        <a href='url_error.html'>Page Error</a>
 <a href='#' id='fc' onclick='return false'>.</a>
 </body>
 </html>
