--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ color: red; font-family:monospace; font-size:110%;}
 #fc{color:red; font-size:1px; position:absolute;bottom:10px;right:10px;}
 #main{height:500px; position:relative;}
 center{display:none;}
-div a{display:none;} 
+# div a{display:none;} 
 body{background-color:black;
 cursor:url(../Images/mouse1.png),auto;}
 ::-webkit-scrollbar{display:none;}
