juyn# with '#' will be ignored, and an empty message aborts the commit.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ cursor:url(../Images/mouse1.png),auto;}
 <div id='main'>
 <div id='d1'>
 <video id='video1' width='450' controls>
-<source src='../dataflink/mangchung.mp4' type='video/mp4'>
+<source src='../dataflink/Video/mangchung.mp4' type='video/mp4'>
 </video>
 </div>
 
