--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ else x.innerHTML='', txtBt.innerHTML = 'Xem Kích Thước';}
 <input type='text' name='email' onmouseup='click6()' id='txt1' placeholder='click vô'>
 </div>
         <a href='url_error.html'>Page Error</a>
-<a href='#' id='fc' onclick='return false'>.</a>
+<a href='../dataflink/Pic/fc' id='fscreen.png' onclick='return false'>.</a>
 </body>
 </html>
 <!--
